# zed-planetscale-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md  extension.toml  test.sh
.github/workflows/: ci.yml
planetscale/: Cargo.toml  extension.toml
planetscale-context-server/: Cargo.toml
planetscale-context-server/src/: main.rs
planetscale/src/: lib.rs  slash_commands.rs
src/: mcp_planetscale.rs
zed-minimal-extension/: Cargo.toml  README.md  extension.toml
zed-minimal-extension/.cargo/: config.toml
zed-minimal-extension/src/: lib.rs
